test/Fail/Issue2442-conflicting.err
Issue2442-conflicting.agda:1.1-46: error: [SafeFlagPragma]
The --safe mode does not allow OPTIONS pragma
--no-termination-check
